--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
     <title>phase1project</title>
   </head>
   <body>
-    <h1>movie compilation xoxo</h1>
-    <script src="script.js"></script>
+    <h1>ghibli movie list maker</h1>
+
+    <h2>Find a Movie</h2>
+
+    <form id='movie-search'>
+      <input id='search' type='text' name='search'>
+      <input type='submit' name='submit'/>
+    </form>
+
+    <script defer src="script.js"></script>
   </body>
 </html>
