--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1 id="big-title">studio ghibli movie finder</h1>
 
     <div id="buttons">
-        <button type="button" id="all-movies">Explore All Movies (nonfunctional rn)</button>
+        <button type="button" id="all-movies">Explore All Movies</button>
 
     <p id="searchbar-text">or search for a movie by title</p>
 
@@ -16,15 +16,18 @@
       <input id='search' type='text' name='search'>
       <input type='submit' name='submit'/>
     </form>
-
     <!--button type="button" id="randomize">Randomize!</button-->
+    </div>
+
+    <div id='explore-result-display'>
+        <p id="explore-result"></p>
     </div>
 
     <div id='search-result-display'>
         <p id='search-result'>
 
         </p>
-      </div>
+    </div>
 
     <div id='movie-lists'>
         <ul id='to-watch-list'>
@@ -34,7 +37,7 @@
         <ul id='watched-list'>
   
         </ul>
-      </div>
+    </div>
 
     <script defer src="script.js"></script>
   </body>
