minor changes to all files, no big things added

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="style.css" />
-    <title>phase1project</title>
+    <title>phase 1 project</title>
   </head>
   <body>
     <h1 id="big-title">studio ghibli movie finder</h1>
@@ -16,7 +16,11 @@
       <input id='search' type='text' name='search'>
       <input type='submit' name='submit'/>
     </form>
+    <p></p> 
     <!--button type="button" id="randomize">Randomize!</button-->
+    <button type="button" id="fav">My Favorites (coming soon)</button>
+    <button type="button" id="watch">My Watch List (coming soon)</button>
+
     </div>
 
     <div id='explore-result-display'>
