started work on my favorites and my watch list, added buttons to each movie result

--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
       <input type='submit' name='submit'/>
     </form>
     <p></p> 
-    <!--button type="button" id="randomize">Randomize!</button-->
-    <button type="button" id="fav">My Favorites (coming soon)</button>
-    <button type="button" id="watch">My Watch List (coming soon)</button>
+    <button type="button" id="fav">My Favorites</button>
+    <button type="button" id="watch">My Watch List</button>
 
     </div>
 
@@ -34,11 +33,11 @@
     </div>
 
     <div id='movie-lists'>
-        <ul id='to-watch-list'>
+        <ul id='favorites-list'>
   
         </ul>
   
-        <ul id='watched-list'>
+        <ul id='watch-list'>
   
         </ul>
     </div>
