added watch list function to add movie title and year to watch list, plus clear list button, plus alerts

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     </div>
 
     <div id='movie-lists'>
-        <ul id='watch-list'>
-  
-        </ul>
+        <p id='watch-list'>
+        </p>
+        <button type="button" id="clear-list">Clear List</button>
     </div>
 
     <script defer src="script.js"></script>
