added homescreen message

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
         </p>
     </div>
 
+    <h4 id='homescreen-message'>
+      Welcome to the Studio Ghibli Movie Finder! Explore all 22 films or search by title, and add a movie you would like to watch to the Watch List!
+    </h4>
+
     <div id='movie-lists'>
         <p id='watch-list'>
         </p>
