forgot to update html with last commit

--- a/index.html
+++ b/index.html
@@ -20,12 +20,8 @@
       <button type="button" id="watch">My Watch List</button>
     </div>
 
-    <div id='explore-result-display'>
-        <p id="explore-result"></p>
-    </div>
-
-    <div id='search-result-display'>
-        <p id='search-result'></p>
+    <div id='result-display'>
+        <p id="result"></p>
     </div>
 
     <div id="homescreen">
